# VaultMind

./: INSTRUCCIONES.MD  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  database.rs  lib.rs
src/styles/: globals.css
