[package]
name = "vaultmind"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Crypto Dependencies ---
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2.12", features = ["js"] }
base64 = "0.22.1"
thiserror = "1.0"

# --- Database Dependencies ---
sled = "0.34.7"

